BARC UAT/src/objects/Cluster_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Cluster Items</relationshipLabel>
        <relationshipName>Cluster_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>STB_ID__c</fullName>
        <label>STB ID/ GOS STB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STB_Type__c</fullName>
        <label>STB Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Card_ID__c</fullName>
        <label>Smart Card ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VC_No__c</fullName>
        <label>VC No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cluster Item</label>
    <nameField>
        <displayFormat>CLI-{0}</displayFormat>
        <label>Sr No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>